[package]
name = "await"
version = "0.1.0"
authors = ["Tony Deng <wolf.deng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
futures-preview = {version = "=0.3.0-alpha.17", features = ["async-await", "nightly"]}